Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23993

QNetworkReply uploadProgress signal has incorrect values when retrying upload of a QIODevice

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.1, 5.0.0
    • 4.8.0
    • Core: I/O, Network
    • None
    • f5ddeeca80983ad7579e0b7ba116f0250debdfcd (4.8), 33179842341fcf7d42e74f62a600470aed6b08a1 (5.0)

      Root cause determined to be QNonContiguousByteDevice::reset not resetting the progress counter for the QIODevice variant.

        For Gerrit Dashboard: QTBUG-23993
        # Subject Branch Project Status CR V

            shkearns Shane Kearns
            shkearns Shane Kearns
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes